--- a/css/old-styling.css
+++ b/css/old-styling.css
@@ -79,7 +79,7 @@ header img {
   align-content: center;
 }
 
-nav ul {
+header p {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(6em, 1fr));
