--- a/css/old-styling.css
+++ b/css/old-styling.css
@@ -65,8 +65,9 @@ h2 {
 }
 
 header {
+  padding: 5px;
   display: grid;
-  background-color: #c82a28;
+  background-color: rgb(0, 68, 255);
   grid-template-columns: 110px auto;
   align-items: center;
   border-radius: 5px 5px 5px 5px;
@@ -90,6 +91,7 @@ header p {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border-radius: 5px;
 }
 
 .home-grid {
@@ -142,7 +144,7 @@ header p {
 
 .contact-container h1 {
   color: #fdfffc;
-  background-color: #c82a28;
+  background-color: rgb(0, 68, 255);
   grid-column: 3/13;
   grid-row: 4/6;
   border-radius: 5px;
