--- a/lesson3/css/site-plan.css
+++ b/lesson3/css/site-plan.css
@@ -1,20 +1,14 @@
-/* if you are using any Google fonts change the font names below to your fonts. 
-Any spaces in your font name should be replaced with a +. 
-Fonts are separated by a | */
-@import url("https://fonts.googleapis.com/css?family=Libre+Baskerville|Verdana");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@100&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 :root {
-  /* change the values below to your colors from your palette */
-  --primary-color: #d4d4d4;
-  --secondary-color: #305298;
-  --accent1-color: #373e40;
-  --accent2-color: #b7d5d4;
+  --primary-color: #c9c9c9;
+  --secondary-color: #1c97fc;
+  --accent1-color: #3f48cc;
+  --accent2-color: #7f2be6;
 
-  /* change the values below to your chosen font(s) */
   --heading-font: "Roboto", sans-serif;
   --paragraph-font: Lato, Helvetica, sans-serif;
 
-  /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: black; /* headlines on a white background */
   --headline-color-on-color: #ffffff; /* headlines on a colored background */
   --paragraph-color-on-white: black; /* paragraph text on a white background */
@@ -26,7 +20,6 @@ Fonts are separated by a | */
   --nav-hover-background-color: #d4d4d4;
 }
 
-/*  Look around below...but DON'T CHANGE ANYTHING! */
 html {
   background-color: var(--primary-color);
 }
@@ -95,75 +88,4 @@ p {
 p.colored {
   background-color: var(--text-background-color);
   color: var(--paragraph-color-on-color);
-}
-
-nav {
-  background-color: var(--nav-background-color);
-  line-height: 3em;
-  text-align: center;
-  font-size: 1.2em;
-}
-nav > ul {
-  list-style-type: none;
-  display: flex;
-}
-nav a {
-  padding: 1em;
-  min-width: 70px;
-}
-nav a:link,
-nav a:visited {
-  color: var(--nav-link-color);
-}
-nav a:hover {
-  color: var(--nav-hover-link-color);
-  background-color: var(--nav-hover-background-color);
-}
-
-.sitemap {
-  display: grid;
-  justify-content: center;
-
-  grid-template-columns: repeat(6, 15%);
-  grid-template-rows: 3em 1.5em 1.5em 3em;
-  grid-template-areas:
-    ". . home home . ."
-    ". . . top . ."
-    ". left left right right ."
-    "page2 page2 . . page3 page3";
-}
-.sitemap > div {
-  text-align: center;
-}
-.sm-home {
-  grid-area: home;
-  background-color: #999;
-  line-height: 3em;
-}
-.sm-page2 {
-  grid-area: page2;
-  background-color: #999;
-  line-height: 3em;
-}
-.sm-page3 {
-  grid-area: page3;
-  background-color: #999;
-  line-height: 3em;
-}
-
-.top {
-  grid-area: top;
-  border-left: 1px solid;
-}
-
-.left {
-  grid-area: left;
-  border-top: 1px solid;
-  border-left: 1px solid;
-}
-
-.right {
-  grid-area: right;
-  border-top: 1px solid;
-  border-right: 1px solid;
 }
