--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -14,6 +14,7 @@
 }
 html {
   background-color: #131516;
+  color: #e8e6e3;
 }
 h1 {
   font-family: "Montserrat";
@@ -32,6 +33,7 @@ header {
 
   padding: 0.75rem;
   border: 1px solid rgba(0, 0, 0, 0.2);
+  margin: 3px;
 }
 
 header .headBox {
@@ -63,7 +65,7 @@ main .mainContent {
   font-size: 1rem;
 }
 main .mainSelection {
-  margin: 1rem;
+  margin: 3px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   padding: 1rem;
   background-color: #454a4d;
@@ -77,7 +79,7 @@ main picture {
 }
 
 footer p {
-  padding: 0.5rem;
+  font-family: "Courier New", Courier, monospace;
   display: flex;
   flex-direction: column;
   align-items: center;
