--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,36 +1,37 @@
 @media only screen and (min-width: 60em) {
   main .mainContent {
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, auto);
+    grid-template-rows: repeat(3, 200px);
   }
 
   #sec1 {
-    grid-column: 1 / 6;
-    grid-row: 1 / 2;
+    grid-column: 2 / 5;
+    grid-row: 1 / 3;
   }
 
   #sec2 {
-    grid-column: 1 / 3;
-    grid-row: 5 / 6;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
   }
 
   #sec3 {
-    grid-column: 3 / 4;
-    grid-row: 5 / 6;
-  }
-
-  #sec4 {
-    grid-column: 1 / 4;
+    grid-column: 1 / 2;
     grid-row: 2 / 3;
   }
 
-  #sec5 {
-    grid-column: 1 / 4;
+  #sec4 {
+    grid-column: 2 / 5;
     grid-row: 3 / 4;
   }
 
+  #sec5 {
+    grid-column: 5 / 6;
+    grid-row: 1 / 6;
+  }
+
   #sec6 {
-    grid-column: 1 / 4;
-    grid-row: 4 / 5;
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    display: block;
   }
 }
