--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 600px) {
   main .mainContent {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(5, auto);
+    grid-template-rows: repeat(5, 200px);
   }
 
   #sec1 {
@@ -32,5 +32,9 @@
   #sec6 {
     grid-column: 1 / 4;
     grid-row: 4 / 5;
+    display: block;
+  }
+  #spotlight3 {
+    display: none;
   }
 }
