--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -65,6 +65,7 @@ main .mainContent {
   grid-template-rows: auto;
   font-size: 1rem;
   grid-template-rows: repeat(5, 200px);
+  margin: 10px 50px;
 }
 main .mainSelection {
   margin: 3px;
@@ -78,50 +79,53 @@ body h2 {
 }
 
 #sec1 {
-  background-image: url(/chamber/images/licensed-image-min.jpg);
+  background-image: url(https://i.imgur.com/HAumjqx.jpg);
   background-size: cover;
   background-color: white;
 }
 #sec1 h1 {
   background-color: var(--accent1-color);
-  padding: 5px;
+  padding: 10px;
+  width: fit-content;
 }
 
-#sec2 {
-  background-color: var(--primary-color);
-}
+/* #sec2 {}
 
-#sec3 {
-  background-color: var(--primary-color);
-}
+#sec3 {}
+*/
 
 #sec4 {
-  background-color: var(--primary-color);
+  overflow: auto;
 }
 
-#sec5 {
-  background-color: var(--primary-color);
-}
 .spotlight {
+  text-align: center;
+  display: grid;
   background-color: var(--secondary-color);
 }
 
 #sec6 h2 {
   background-color: var(--accent2-color);
-  font: size 0.85em;
+
+  padding: 5px;
 }
 
-@media only screen and (min-width: 0em) {
+@media only screen and (max-width: 600em) {
   #sec6 {
     display: none;
   }
-  #spotlight3 {
-    display: none;
-  }
+
   #sec1 {
     background-image: url(/chamber/images/licensed-image-min.jpg);
 
     background-color: white;
+  }
+  .spotlight {
+    height: 100%;
+    grid-template-rows: repeat(2, 1fr);
+  }
+  #spotlight3 {
+    display: none;
   }
 }
 
