--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 600px) {
   main .mainContent {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(5, 200px);
+    grid-template-rows: repeat(5, 250px);
   }
 
   #sec1 {
@@ -34,6 +34,12 @@
     grid-row: 4 / 5;
     display: block;
   }
+
+  .spotlight {
+    height: 100%;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
   #spotlight3 {
     display: none;
   }
