--- a/lesson8/css/tablecss.css
+++ b/lesson8/css/tablecss.css
@@ -36,6 +36,7 @@ body {
     margin: 10px 400px 25px;
   }
 }
+
 h1 {
   font-family: "Zen Kurenaido", sans-serif;
   font-size: 32px;
@@ -45,19 +46,8 @@ head {
   font-family: "Libre Baskerville", Georgia, serif;
 }
 
-/* body{
-  
-  font-family:Verdana, Helvetica, sans-serif;
-  font-size: 24px;}
- */
 a {
   font-size: 1em;
-}
-
-.container {
-  background-color: #fdfffc;
-  padding: 70px;
-  margin: auto;
 }
 
 h2 {
@@ -70,26 +60,21 @@ h2 {
 }
 
 header {
-  padding: 5px;
-  display: grid;
-  background-color: rgb(0, 68, 255);
-  grid-template-columns: 110px auto;
-  align-items: center;
-  border-radius: 5px 5px 5px 5px;
-  font-size: 2em;
-  color: #0b003b;
+  background-color: #aaa;
+
+  padding: 0.75rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin: 3px;
 }
 
-header img {
-  justify-content: center;
-  align-content: center;
+header .headBox {
+  display: grid;
+  grid-template-columns: 50px repeat(4, 1fr);
+  grid-template-rows: 50px 50px;
 }
 
 header p {
-  list-style: none;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(6em, 1fr));
-  margin: 0;
+  text-align: center;
 }
 
 .logo-box img {
@@ -143,45 +128,6 @@ header p {
   padding: 0px 20px;
 }
 
-.contact-grid {
-  padding: 20px;
-}
-
-.contact-container h1 {
-  color: #fdfffc;
-  background-color: rgb(0, 68, 255);
-  grid-column: 3/13;
-  grid-row: 4/6;
-  border-radius: 5px;
-  padding: 0px 20px;
-}
-
-.account-grid {
-  padding: 20px;
-  display: grid;
-
-  align-items: center;
-
-  grid-template-columns: repeat(10, 1fr);
-}
-
-.account-form h1 {
-  color: #fdfffc;
-  background-color: #c82a28;
-  grid-column: 3/13;
-  grid-row: 4/6;
-  border-radius: 5px;
-  padding: 0px 20px;
-}
-
-.account-para {
-  color: #fdfffc;
-  background-color: #141414;
-  margin: 0px;
-  border-radius: 5px;
-  padding: 10px;
-}
-
 img {
   max-width: 100%;
 }
@@ -215,6 +161,12 @@ a:hover {
 /* selected link */
 a:active {
   color: #0000ff;
+}
+
+form {
+  display: block;
+  width: max-content;
+  max-width: 100px;
 }
 
 @media screen and (max-width: 550px) {
