--- a/bountifulFoods/styles/base.css
+++ b/bountifulFoods/styles/base.css
@@ -13,6 +13,7 @@ header {
   padding: 10px;
   margin: 0px 95px 10px 95px;
   font-family: Alegreya, serif;
+  border-radius: 5px;
 }
 
 header a {
@@ -47,11 +48,14 @@ header img {
 }
 
 main {
+  background-image: url(/bountifulFoods/images/basket2.png);
+  background-size: contain;
+  background-position: center;
   max-width: 1124px;
   margin: 0 auto;
   padding: 1em;
   background-color: var(--secondary-color);
-  border: 5px solid var(--accent3-color);
+  border: 15px solid var(--accent3-color);
   border-radius: 15px;
 }
 
@@ -65,6 +69,8 @@ main {
   background-color: var(--accent2-color);
   padding: 5px;
   /* margin: 5px; */
+  border: 5px solid var(--secondary-color);
+  border-radius: 5px;
 }
 
 #image1 {
@@ -74,8 +80,6 @@ main {
   background-size: cover;
   background-color: var(--accent1-color);
   margin-bottom: 10px;
-  border: 5px solid var(--accent3-color);
-  border-radius: 5px;
 }
 
 #sec1 {
